Div has been added.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 <body>
     <h1>Hello !!</h1>
     <p>This is my website</p>
-    
+    <div>
+        <p> Hello </p>
+    </div>    
 </body>
 </html>
