--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Hello!!</title>
 </head>
 <body>
-    <h1>Hello !!</h1>
+    <h1>Hello world!!</h1>
     <p>This is my website</p>
     <div>
         <p> Hello </p>
