--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hello!!</title>
 </head>
-<body>
+<body style="style:background-coler:red">
     <h1>Hello !!</h1>
     <p>This is my website</p>
     <div>
